[package]
name = "iop-python"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iop_python"
crate-type =["lib", "cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
iop-sdk = "0.0.16"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
json-digest = "0.0.16"


