[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "iop-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "This Python library provides bindings to a Rust sdk, enabling seamless interaction with minor blockchain transactions on the hydraledger blockchain"
readme = "README.md"
keywords = ["blockchain", "hydralegeder", "crypto", "decentralized identity", "did"]


[tool.maturin]
features = ["pyo3/extension-module"]
