[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "iop-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
readme = "README.md"
keywords = ["blockchain", "hydralegeder", "cryptography", "bip39", "did"]
authors = [
  {email = "ebuka2264@yahoo.com"},
  {name = "Ebuka Offor"}
]
maintainers = [
  {name = "Buki", email = "ebuka2264@yahoo.com"},
  {name = " Odurukwe Stella", email = "odurukwestella5@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/BukiOffor/hydra-python-api"
Issues = "https://github.com/BukiOffor/hydra-python-api/issues"


[tool.maturin]
features = ["pyo3/extension-module"]
