[package]
name = "iop-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.76"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version="1.0.193", features=["derive"]}
uuid = "1.6.1"
validator ={version = "0.17.0", features=["derive"]}
log = "0.4.11"
env_logger = "0.11.1"
actix-web-httpauth = "0.8.1"
alcoholic_jwt = "4091.0.0"
anyhow = "1.0"
native-json = "1.2.10"
iop-sdk = "0.0.16"
reqwest = { version = "0.11.22", features = ["json"] }
async-std = {version = "1.9", features = ["attributes", "tokio1"]}
serde_json = "1.0.108"
json-digest = "0.0.16"